@@ -642,6 +642,8 @@
  do_copyDFattr
  do_crc64
  do_cum
+ do_curlDownload
+ do_curlGetHeaders
  do_curlVersion
  do_date
  do_debug
